--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,14 @@
+@font-face {
+	font-family: Roboto;
+	src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+}
+
 * {
 	box-sizing: border-box;
+	font-family: Roboto;
+}
+
+body, div, p, h1, h2, h3, h4 {
+	padding: 0;
+	margin: 0;
 }
