--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,10 @@
 	font-family: Roboto;
 }
 
+html {
+	font-size: 16px;
+}
+
 body, div, p, h1, h2, h3, h4, ul, li {
 	padding: 0;
 	margin: 0;
@@ -14,7 +18,6 @@ body {
 	background: rgb(10, 10, 10, 0.3) url("../img/bg2.png");
 	background-blend-mode: darken;
 	color: white;
-	font-size: 100%;
 	background-size: cover;
 }
 
@@ -72,4 +75,26 @@ body {
 
 .landing-page .social a:hover {
 	background-color: rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (max-width: 768px) {
+	html {
+		font-size: 14px;
+	}
+
+	.landing-page .pic {
+		width: 175px;
+		height: 175px;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	html {
+		font-size: 12px;
+	}
+
+	.landing-page .pic {
+		width: 150;
+		height: 150px;
+	}
 }
