--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@ body {
 .landing-page {
 	width: 100%;
 	height: 100vh;
+	height: -webkit-fill-available;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
