--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@ body {
 	background-blend-mode: darken;
 	color: white;
 	background-size: cover;
+	background-attachment: fixed;
 }
 
 .landing-page {
