--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ body {
 .landing-page {
 	width: 100%;
 	height: 100vh;
-	height: -webkit-fill-available;
+	height: --webkit-fill-available;
 	color: white;
 	display: flex;
 	flex-direction: column;
@@ -163,6 +163,10 @@ body {
 @media screen and (max-width: 768px) {
 	html {
 		font-size: 14px;
+	}
+
+	.landing-page {
+		height: --webkit-fill-available;
 	}
 
 	.landing-page .pic {
