--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,7 +103,7 @@ body {
 .subpage {
 	width: 100%;
 	height: 100vh;
-	height: -webkit-fill-available;
+	height: --webkit-fill-available;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
